--- a/src/components/quote.css
+++ b/src/components/quote.css
@@ -49,6 +49,14 @@
   margin: 4em;
 }
 
+.error-wrapper {
+  text-align: center;
+  color: red;
+  font-size: 1.5em;
+  font-weight: bolder;
+  margin-top: 4em;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
