add container and additional style to calculator component

--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -47,3 +47,11 @@ button:hover {
 .bgColor {
   background-color: orange;
 }
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 70%;
+  margin: 4em auto;
+}
